// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extendInterface extends interface with other matching interfaces 1`] = `
"import { FoobarInterface } from '../__fixtures__/foobar-interface';
export type ExtendedInterface = FoobarInterface;
"
`;

exports[`extendInterface handles scenario where no matching interface is found 1`] = `
"import { FoobarInterface } from '../__fixtures__/foobar-interface';
export type ExtendedDummyInterface = FoobarInterface;
"
`;
